# mermaids_experiment

./: .gitignore  .gitmodules  99-telescopes.rules  README.md  diagnose.py  install_dependencies.sh  install_offline.sh  multi_mount.py  point_mount.py  prepare_offline_packages.sh  pyproject.toml  start_server.sh
docs/: OFFLINE_INSTALLATION.md  README.md
mount_driver/: .mount1_driver.sh  .mount3_driver.sh  .mount4_driver.sh  .multi_mount_config.json  99-telescopes.rules  README.md  calibrate.py  generate_udev_rules.py  gps_serial.py  multi_mount.py  point_mount.py  start_server.sh
scripts/: .mount2_driver.sh  start_server.sh
src/mount_driver/: .multi_mount_config.json  __init__.py  calibration.py  diagnostics.py  gps.py  indi.py  mount.py  multi_mount.py  pointing_model.py
src/mount_driver/cli/: __init__.py  calibrate.py  diagnose.py  mount.py  mounts.py  observe.py
